Fixed build instructions to match new repo name. Refs #26.

--- a/TutorialAndDevGuide/Tutorial/introduction.tex
+++ b/TutorialAndDevGuide/Tutorial/introduction.tex
@@ -80,8 +80,8 @@ cabal install copilot
 the repositories as well. Typically one would only go this route to develop
 Copilot. For regular users the hackage method above is highly recommended.
 \begin{code}
-git clone https://github.com/Copilot-Language/Copilot.git
-cd Copilot
+git clone https://github.com/Copilot-Language/copilot.git
+cd copilot
 git submodule update --init --remote
 \end{code}
 Compiling can either be done in a Nix-style build, or a traditional one:
