Edit the authors to add new authors and update or remove outdated emails. Refs #32.

--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -202,62 +202,50 @@ a.goodloe@nasa.gov\\
 \begin{center}
 Ivan Perez\\
 \small{
-ivan.perez@nianet.org\\
+ivan.perezdominguez@nasa.gov\\
 }
 \end{center}
 \end{minipage}
 %
+\begin{minipage}{0.3\textwidth}
+\large
+\begin{center}
+Will Pogge\\
+\small{
+will.d.pogge@ama-inc.com\\
+}
+\end{center}
+\end{minipage}
+
+\vspace{1cm}
+
 \begin{minipage}{0.3\textwidth}
 \large
 \begin{center}
 Macallan Cruff\\
-\small{
-mcruff@andrew.cmu.edu\\
-}
 \end{center}
 \end{minipage}
-
-\vspace{1cm}
-
+%
 \begin{minipage}{0.3\textwidth}
 \large
 \begin{center}
 Nis N. Wegmann\\
-\small{
-niswegmann@gmail.com\\
-}
 \end{center}
 \end{minipage}
-%
+
+\vspace{1cm}
+
 \begin{minipage}{0.3\textwidth}
 \large
 \begin{center}
 Lee Pike\\
-\small{
-leepike@galois.com\\
-}
 \end{center}
 \end{minipage}
-
-\vspace{1cm}
-
+%
 \begin{minipage}{0.3\textwidth}
 \large
 \begin{center}
 Chris Hathhorn \\
-\small{
-hathhorn@gmail.com\\
-}
-\end{center}
-\end{minipage}
-%
-\begin{minipage}{0.3\textwidth}
-\large
-\begin{center}
-Sebastian Niller\\
-\small{
-sebastian.niller@gmail.com\\
-}
 \end{center}
 \end{minipage}
 
@@ -266,20 +254,23 @@ sebastian.niller@gmail.com\\
 \begin{minipage}{0.3\textwidth}
 \large
 \begin{center}
-Lauren Pick\\
-\small{
-lmpick@zoho.com\\
-}
+Sebastian Niller\\
 \end{center}
 \end{minipage}
 %
 \begin{minipage}{0.3\textwidth}
 \large
 \begin{center}
+Lauren Pick\\
+\end{center}
+\end{minipage}
+
+\vspace{1cm}
+
+\begin{minipage}{0.3\textwidth}
+\large
+\begin{center}
 Georges-Axel Jaloyan \\
-\small{
-georges-axel.jaloyan@ens.fr\\
-}
 \end{center}
 \end{minipage}
 
