--- a/TutorialAndDevGuide/Tutorial/example.tex
+++ b/TutorialAndDevGuide/Tutorial/example.tex
@@ -10,6 +10,39 @@ temperature is read from a sensor returns a byte, with a range of
 $-50.0\degree$C to $100.0\degree$C. For easy of use, the monitor translates the
 byte to a float within this range.
 
+\subsection{Compiling Copilot} \label{sec:compiling}
+
+Compiling a Copilot specification is straightforward. Currently Copilot
+supports one back-end, \texttt{copilot-c99} that creates constant-space C99
+code. Using the back-end is rather easy, as it just requires one to import it in
+their Copilot specification file:
+
+\begin{lstlisting}[language = Copilot]
+import Copilot.Compile.C99
+\end{lstlisting}
+
+Importing the back-end provides us with the \texttt{compile}-function, which
+takes a prefix as its first parameter and a \textit{reified} specification as
+its second. When inside \texttt{ghci}, with our file loaded, we can generate
+output code by executing:
+\footnote{Two explanations are in order: (1) {\tt reify} allows sharing in the
+expressions to be compiled~\cite{DSLExtract}, and {\tt >>=} is a higher-order
+operator that takes the result of reification and ``feeds'' it to the compile
+function.}
+\begin{lstlisting}[language = Copilot]
+reify spec >>= compile "monitor"
+\end{lstlisting}
+
+This generates three output files:
+\begin{itemize}
+  \item \texttt{<prefix>.c}: C99 file containing the generated code and the
+  \texttt{step()} function. This should be compiled by the C compiler, and
+  included in the final binary.
+  \item \texttt{<prefix>\_types.h}: Header file containing datatypes defined in the specification and used by Copilot internally. Copilot users can opt to include these definitions in their C code, to avoid having to manually define those datatypes and keep them in sync. However, when the Copilot specification is tied to an existing codebase, including this header from user code is not recommended as the definitions in it may conflict with C types defined elsewhere in the same codebase.
+ \item \texttt{<prefix>.h}: Header providing the public interface to the
+  monitor. This file should be included from your main project.
+\end{itemize}
+
 \subsection{C Code}
 Lets start of with the C program our monitor to connect to.
 \begin{lstlisting}[language=c, numbers=left]
