Add in the hyperref package so that people can ref around the document

--- a/TutorialAndDevGuide/Tutorial/Interpret.tex
+++ b/TutorialAndDevGuide/Tutorial/Interpret.tex
@@ -2,7 +2,7 @@
 \section{Interpreting}
 \label{interpcompile}
 The Copilot RV framework comes with both an interpreter and a
-compiler. We will address compiling in section 4 with a complete example. 
+compiler. We will address compiling in \hyperref[sec:complete_example]{section 4} with a complete example. 
 \noindent To use the language, your Haskell module should contain the following import:
 %
 \begin{code}
