--- a/TutorialAndDevGuide/Tutorial/example.tex
+++ b/TutorialAndDevGuide/Tutorial/example.tex
@@ -30,7 +30,7 @@ expressions to be compiled~\cite{DSLExtract}, and {\tt >>=} is a higher-order
 operator that takes the result of reification and ``feeds'' it to the compile
 function.}
 \begin{lstlisting}[language = Copilot]
-reify spec >>= compile "monitor"
+reify spec >>= compile "heater"
 \end{lstlisting}
 
 This generates three output files:
